--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,25 @@
 <resources>
     <string name="app_name">SpendingsApp</string>
+
+    //Home screen
+    <string name="home_label_recent">Recent</string>
+    <string name="home_label_add">Add</string>
+
+
+    //Transaction screen
     <string name="title_activity_transaction">Transaction</string>
+    <string name="transaction_field_default_title">Transaction</string>
+    <string name="transaction_field_default_category">Other</string>
+    <string name="transaction_field_default_value">0,00</string>
+    <string name="transaction_field_hint_title">Transaction</string>
+    <string name="transaction_field_hint_value">Value</string>
+    <string name="transaction_field_hint_date">Date</string>
+    <string name="transaction_field_hint_category">Category</string>
+    <string name="transaction_field_hint_currency">Currency</string>
+    <string name="transaction_button_delete">Delete</string>
+    <string name="transaction_button_save">Save</string>
+    <string name="transaction_actions_date">Date</string>
+    <string name="transaction_actions_currency">Currency</string>
+    <string name="transaction_actions_more">More</string>
+    <string name="transaction_actions_done">Done</string>
 </resources>
