--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,15 +11,14 @@
     <string name="transaction_field_default_title">Transaction</string>
     <string name="transaction_field_default_category">Other</string>
     <string name="transaction_field_default_value">0,00</string>
-    <string name="transaction_field_hint_title">Transaction</string>
+    <string name="transaction_field_hint_title">Name</string>
     <string name="transaction_field_hint_value">Value</string>
     <string name="transaction_field_hint_date">Date</string>
     <string name="transaction_field_hint_category">Category</string>
     <string name="transaction_field_hint_currency">Currency</string>
-    <string name="transaction_button_delete">Delete</string>
-    <string name="transaction_button_save">Save</string>
-    <string name="transaction_actions_date">Date</string>
-    <string name="transaction_actions_currency">Currency</string>
-    <string name="transaction_actions_more">More</string>
-    <string name="transaction_actions_done">Done</string>
+    <string name="transaction_actions_button_delete">Delete</string>
+    <string name="transaction_actions_button_save">Save</string>
+    <string name="transaction_fields_category">Category</string>
+    <string name="transaction_fields_currency">Currency</string>
+    <string name="transaction_na_more">More</string>
 </resources>
